--- a/views/warranty_record_view.xml
+++ b/views/warranty_record_view.xml
@@ -4,6 +4,7 @@
 	<menuitem name="Warranty" id="sales_warranty_sub_menu" parent="sales_warranty_parent_menu"/>
 	<menuitem name="Product" id="product_id_menu" parent="sales_warranty_parent_menu"/>
 	<menuitem name="Project" id="project_id_menu" parent="sales_warranty_parent_menu"/>
+	<menuitem name="Sales Service" id="service_id_menu" parent="sales_warranty_parent_menu"/>
 
 	<!-- Sales Warranty Tree View  -->
 	<record id="sales_warranty_details_tree" model="ir.ui.view">
@@ -19,7 +20,7 @@
 				<field name="warranty_end_date"/>
 				<field name="qty_id"/>
 				<field name="pasang_id"/>
-				<field name="checklist_progress" widget="progressbar"/>
+				<!-- <field name="checklist_progress" widget="progressbar"/> -->
 				<field name="state"/>
 			</tree>
 		</field>
@@ -135,6 +136,5 @@
 	<menuitem name="Warranty" id="sales_warranty_second_sub_menu" parent="sales_warranty_sub_menu" action="sales_warranty_details_action" />
 	<menuitem name="Product" id="product_menu_catalog" parent="product_id_menu" action="product.product_template_action" sequence="4" groups="sales_team.group_sale_salesman" />
 	<menuitem name="Customer" id="customer_menu_catalog" parent="product_id_menu" action="base.action_partner_form" sequence="5" groups="sales_team.group_sale_salesman" />
-
-	
+	<!-- <menuitem name="Quotation" id="menu_sale_quotations" parent="service_id_menu" action="action_quotations" sequence="11" />  -->
 </odoo>
