--- a/views/service_record_view.xml
+++ b/views/service_record_view.xml
@@ -6,9 +6,10 @@
            <field name="model">service.details</field>
            <field name="arch" type="xml">
                <tree string="Sales Servcie Details" class="">
-                   <field name="warranty_id"/>
-                   <field name="product_id"/>
-                   <field name="date_received"/>
+				<field name="name"/>
+				<field name="warranty_id"/>
+				<field name="product_id"/>
+				<field name="date_received"/>
 		        <field name="return_date"/>
 		        <field name="state"/>
                </tree>
@@ -34,6 +35,16 @@
 		           		
 		            </header>
 		            <sheet>
+						<div class="oe_right oe_button_box" name="button_box" position="inside">
+							<button name="action_warranty_task" type="object" class="oe_stat_button" icon="fa-tasks">
+								<field string="Task" name="task_count" widget="statinfo"/>
+							</button>
+						</div>
+						<div class="oe_title">
+							<h1>
+								<field name="name" readonly="1" required="True"/>
+							</h1>
+						</div>
 		                    <group>
 		                    	<group>
 									<field name="responsible_id"/>
