--- a/views/task_checklist_view.xml
+++ b/views/task_checklist_view.xml
@@ -7,6 +7,7 @@
         <field name="res_model">task.checklist</field>
         <field name="view_type">form</field>
         <field name="view_mode">tree,form</field>
+
         <field name="domain">[]</field>
         <field name="context">{}</field>
         <field name="help" type="html">
@@ -16,7 +17,6 @@
         </field>
     </record>
 
-    <menuitem id="task_check_list_menu" name="Task Checklist" parent="project_id_menu" sequence="3"
-              action="action_task_checklist"/>
+    <menuitem id="task_check_list_menu" name="Task Checklist" parent="project_id_menu" sequence="3" action="action_task_checklist"/>
 
 </odoo>
